add chapter page, book info edit, double click open picture, and update yaml config

--- a/config.yaml
+++ b/config.yaml
@@ -13,6 +13,12 @@ db_name: ebook
 book_table_name: shotbook
 chapter_table_name: chapter
 
+# 客户端参数
+col_num: 5 # 默认选图列数
+page_count: 10 # 每页图片数
+img_width: 200 # 默认图像宽度
+img_height: 333 # 默认图像高度
+
 # 文件下载根路径
 rootpath: F:/ebook/
 
