update pos_to_loc_book for more than max down position

--- a/config.yaml
+++ b/config.yaml
@@ -47,3 +47,7 @@ inner_blank_sleep: [354, 467, 0.2] # 书内空白位置
 next_pos_sleep: [666, 568, 0.2] # 下一页位置，延时
 blod_para: [3, 3, 65] # 识别粗体的参数
 equal_times: 5 # 判断几次图片一样则这本书抓取结束
+
+# 新添不能下翻移动鼠标的参数
+max_down_times: 48 # 最大允许的下翻次数
+row_height: 67 # 行高
